--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@angular/platform-browser": "~8.1.0",
     "@angular/platform-browser-dynamic": "~8.1.0",
     "@angular/router": "~8.1.0",
+    "@types/lodash": "^4.14.136",
     "bootstrap": "^4.3.1",
+    "lodash": "^4.17.13",
     "rxjs": "~6.5.2",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
